# BioXen_Fourier_lib

./: .gitignore  .gitmodules  4-lenses.md  4-phase-plan-deep-research-prompt.md  4-phase-plan.md  =6.0  BioLib2D.md  BioXen_v0.0.07_SUCCESS_REPORT.md  DEBUG_FOURIER_INSTRUCTIONS.md  GENOME_INTEGRATION.md  GIT_COMMIT_GUIDE.md  HARDWARE_QUICK_REFERENCE.md  HARDWARE_RECOMMENDATIONS.md  IMPLEMENTATION_SUMMARY.md  INVESTIGATION_SUMMARY.md  JCVI_SOURCE_ANALYSIS.md  LICENSE  MASTER-PROMPT-MVP-FIRST-v2.1.md  MASTER_PROMPT_CONTINUATION_PLAN.md  MISSION_ACCOMPLISHED.md  MRA-tests-laptop.md  MVP_COMPLETION_STATUS.md  MVP_EXECUTION_MODEL.md  Makefile  OPEN_SOURCE_STACK.md  PHASE1-3_COMPLETE.md  PHASE1_4_IMPORT_FIX.md  PHASE1_5_MRA_COMPLETE.md  PHASE1_COMPLETE.md  PHASE1_DIY_GUIDE.md  PHASE1_FEATURE2_COMPLETE.md  PHASE1_PLAN.md  PHASE1_QUICK_REF.md  PHASE1_STARTED.md  PHASE1_STATUS.md  PHASE1_SUMMARY.md  PyCWT-mod-api-specification-claudes-implementation-plan.md  PyCWT-mod-api-specification.md  README.md  README_UPDATE_SUMMARY.md  (+143 more)
bioxen_jcvi_vm_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
client-tests/: test-results.md  test_backends.py  test_benchmark.py  test_hardware.py  test_health.py  test_integration.py  test_wavelet.py
docs/: ARCHITECTURE_ALIGNMENT_COMPLETE.md  DEVELOPMENT_ROADMAP.md  HONEST_ASSESSMENT.md  IMPLEMENTATION_STATUS.md  QUICK_REFERENCE.md  RESPONSE_TO_CRITIQUE.md  REVISED_DOCUMENTATION_PLAN.md  UPGRADE_COMPLETION_REPORT.md
docs/Q/: QuBio.md  QuCat.md
engineeredgenomes/: ol-fi-modem-chassis.md  ol-fi-modem-circuits.md
examples/: demo_phase1_harmonics.py  demo_phase1_mra.py  demo_phase1_wavelet_optimization.py  demo_profiler_integration.py  genomic_mvp_demo.py  mvp_demo.py  validate_circadian_fixed.py  validate_time_simulator.py
genomes/: ecoli.genome  minimal.genome  syn3A.fasta  syn3a.genome
interactive_bioxen/: interactive_bioxen.md
lua-vm/: README.md  ps2lua.py
recycle-bin/: JCVI_ENHANCEMENT_SUMMARY.md  MASTER-PROMPT-MVP-FIRST.md  MIGRATION_GUIDE_v0.0.2_to_v0.0.3.md  README.md  add-terminal-instructions.md  bioxen.py  bioxen_data_export.py  bioxen_to_jcvi_converter.py  co-pilot-api-plan-phase1-3.md  co-pilot-api-plan-phase2.md  co-pilot-api-plan-phase3.md  co-pilot-api-plan-response.md  co-pilot-execution-modal-plan-phase1.md  co-pilot-execution-modal-plan-phase2.md  dependencies.txt  enhanced_jcvi_cli.py  factory-pattern-api.prompt4  generate-specification-document-draft.md  generate_biodata.py  generate_biovis_png.py  generate_test_genomes.py  interactive-cli-v0.0.03-enhancement-report.md  interactive-prompt.md  interactive_bioxen_from_BioXen-jcvi.py  interactive_comparative_genomics.py  lib-ver0.0.03-report.md  lib-ver0.0.04-report.md  lib-ver0.0.06-report.md  lib-ver0.0.07-report.md  new-prompt-fourier-transforms.md  new-prompt-three-lenses-grok.md  new-prompt-update-execution-model-claude-mvp-dont-reinvent-the-wheel.md  new-prompt-update-execution-model-claude-mvp.md  new-prompt-update-execution-model-research-addendum.md  phase4_jcvi_cli_integration.py  simple_demo.py  specification-document-bioxen_jcvi_vm_lib_ver0.0.01.md  specification-document-bioxen_jcvi_vm_lib_ver0.0.03.md  specification-document-bioxen_jcvi_vm_lib_ver0.0.04.md  specification-document-bioxen_jcvi_vm_lib_ver0.0.05.md  (+4 more)
recycle-bin/jcvi-main/: .gitignore
recycle-bin/md_archive/: factory-pattern-api-prompt-report.md
recycle-bin/phase4/: Circuits-Modularization-BioCompiler-Development.md
recycle-bin/tests/: host-cap-audit.py  setup_host_audit.py  test_download_fix.py  test_genome.py  test_genome_scanning.py  test_modular_circuits.py  test_pylua-bioxen-vm.py
server/tests/: conftest.py  test_health.py
src/: __init__.py
src/api/: __init__.py  biological_vm.py  enhanced_error_handling.py  (+3 more)
tests/: communication-flowchart.py  test_bioxen.py  test_fix.py  test_genome.py  test_hypervisor.py  test_imports.py  test_jcvi_integration_enhanced.py  test_phase1_harmonics.py  test_phase1_mra.py  test_phase1_wavelet_optimization.py  test_pylua-bioxen-vm.py  test_system_analyzer_mvp.py
wishful-client-tests/: README.md  conftest.py  test_continuous_simulation.py  test_four_lens_analysis.py  test_model_validation.py  test_parameter_tuning.py  test_performance_monitoring.py  test_vm_lifecycle.py
(+57 files in other folders)
