[metadata]
name = bioXen_jcvi_vm_lib
version = 0.0.01
description = Process-isolated networked Lua VMs with multi-VM support and XCP-ng integration
long_description = file: README.md
long_description_content_type = text/markdown
author = pylua_bioxen_vm_lib contributors
author_email = 
url = https://github.com/aptitudetechnology/BioXen_jcvi_vm_lib
project_urls =
    Bug Reports = https://github.com/aptitudetechnology/BioXen_jcvi_vm_lib/issues
    Source = https://github.com/aptitudetechnology/BioXen_jcvi_vm_lib
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Distributed Computing
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Lua
keywords = lua, virtual-machine, bioinformatics, distributed-computing, xcp-ng

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    requests>=2.25.0
    paramiko>=2.7.0
    urllib3>=1.26.0
    questionary>=1.10.0


[metadata]
name = bioxen-jcvi-vm-lib
version = 0.1.0
author = aptitudetechnology
license = MIT
description = BioXen Factory Pattern API for biological VM management
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aptitudetechnology/BioXen_jcvi_vm_lib

[options]
packages = find:
python_requires = >=3.7
install_requires =
    typing_extensions>=3.7.4
    pytest>=6.0.0
    pytest-cov>=2.10.0
    black>=21.0.0
    flake8>=3.8.0
    mypy>=0.800
    sphinx>=3.0.0
    sphinx-rtd-theme>=0.5.0

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
addopts = -v --cov=src/api

[coverage:run]
branch = True
source = src/api

[coverage:report]
omit =
    tests/*
    setup.py
    demo_phase1_api.py
    requirements_api.txt
    PHASE1_COMPLETE.md
    README.md
    docs/*

[flake8]
max-line-length = 100
exclude = .git,__pycache__,docs,build,dist,tests

[mypy]
python_version = 3.7
ignore_missing_imports = True

[aliases]
test = pytest