[metadata]
name = bioxen_jcvi_vm_lib
version = 0.0.6
author = aptitudetechnology
license = MIT
license_files = LICENSE
description = BioXen Factory Pattern API for biological VM management
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aptitudetechnology/BioXen_jcvi_vm_lib
author_email = support@aptitudetechnology.com
keywords = lua, virtual-machine, bioinformatics, distributed-computing, xcp-ng
project_urls =
    Bug Reports = https://github.com/aptitudetechnology/BioXen_jcvi_vm_lib/issues
    Source = https://github.com/aptitudetechnology/BioXen_jcvi_vm_lib
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Distributed Computing
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    pylua-bioxen-vm-lib>=0.1.22
    questionary>=2.1.0
    rich>=13.0.0

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
addopts = -v --cov=src/api

[coverage:run]
branch = True
source = src/api

[coverage:report]
omit =
    tests/*
    setup.py
    demo_phase1_api.py
    requirements_api.txt
    PHASE1_COMPLETE.md
    README.md
    docs/*

[flake8]
max-line-length = 100
exclude = .git,__pycache__,docs,build,dist,tests

[mypy]
python_version = 3.7
ignore_missing_imports = True

[aliases]
test = pytest